--- a/valmodule-diga/pom.xml
+++ b/valmodule-diga/pom.xml
@@ -6,16 +6,11 @@
     <parent>
         <groupId>de.gematik.refv.plugins</groupId>
         <artifactId>parent-pom</artifactId>
-        <version>1.0.0</version>
+        <version>1.0.1-SNAPSHOT</version>
     </parent>
 
     <artifactId>valmodule-diga</artifactId>
-    <version>${project.version}</version>
-    <packaging>pom</packaging>
-
-    <properties>
-        <project.version>0.9.0-SNAPSHOT</project.version>
-    </properties>
+    <version>0.10.0-SNAPSHOT</version>
 
     <build>
         <plugins>
