--- a/valmodule-isik3-terminplanung/pom.xml
+++ b/valmodule-isik3-terminplanung/pom.xml
@@ -6,18 +6,11 @@
     <parent>
         <groupId>de.gematik.refv.plugins</groupId>
         <artifactId>parent-pom</artifactId>
-        <version>1.0.0</version>
+        <version>1.0.1-SNAPSHOT</version>
     </parent>
 
     <artifactId>valmodule-isik3-terminplanung</artifactId>
-    <version>${project.version}</version>
-
-    <properties>
-        <project.version>0.2.0-SNAPSHOT</project.version>
-        <maven.compiler.source>11</maven.compiler.source>
-        <maven.compiler.target>11</maven.compiler.target>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    </properties>
+    <version>0.2.0-SNAPSHOT</version>
 
     <build>
         <plugins>
