--- a/valmodule-isik1/pom.xml
+++ b/valmodule-isik1/pom.xml
@@ -5,17 +5,12 @@
     <parent>
         <artifactId>parent-pom</artifactId>
         <groupId>de.gematik.refv.plugins</groupId>
-        <version>1.0.0</version>
+        <version>1.0.1</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>valmodule-isik1</artifactId>
-    <version>${project.version}</version>
-    <packaging>pom</packaging>
-
-    <properties>
-        <project.version>0.2.0-SNAPSHOT</project.version>
-    </properties>
+    <version>1.2.0-SNAPSHOT</version>
 
     <build>
         <plugins>
