--- a/valmodule-diga/pom.xml
+++ b/valmodule-diga/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>de.gematik.refv.plugins</groupId>
         <artifactId>parent-pom</artifactId>
-        <version>1.0.1</version>
+        <version>1.0.2-SNAPSHOT</version>
     </parent>
 
     <artifactId>valmodule-diga</artifactId>
@@ -49,22 +49,7 @@
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>exec-maven-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <id>diga</id>
-                        <phase>compile</phase>
-                        <goals>
-                            <goal>java</goal>
-                        </goals>
-                    </execution>
-                </executions>
-                <dependencies>
-                    <dependency>
-                        <groupId>de.gematik.refv.plugins</groupId>
-                        <artifactId>plugin-builder</artifactId>
-                        <version>${project.parent.version}</version>
-                    </dependency>
-                </dependencies>
+
             </plugin>
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
@@ -91,4 +76,12 @@
             </plugin>
         </plugins>
     </build>
+
+    <dependencies>
+        <dependency>
+            <groupId>de.gematik.refv.plugins</groupId>
+            <artifactId>plugin-builder</artifactId>
+            <version>${project.parent.version}</version>
+        </dependency>
+    </dependencies>
 </project>
