--- a/valmodule-isik1/pom.xml
+++ b/valmodule-isik1/pom.xml
@@ -10,7 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>valmodule-isik1</artifactId>
-    <version>2.0.0</version>
+    <version>2.1.0-SNAPSHOT</version>
 
     <build>
         <plugins>
