--- a/valmodule-isik2-basismodul/pom.xml
+++ b/valmodule-isik2-basismodul/pom.xml
@@ -10,7 +10,7 @@
     </parent>
 
     <artifactId>valmodule-isik2-basismodul</artifactId>
-    <version>2.0.0</version>
+    <version>2.1.0-SNAPSHOT</version>
 
     <build>
         <plugins>
