--- a/valmodule-isip1/pom.xml
+++ b/valmodule-isip1/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>de.gematik.refv.plugins</groupId>
         <artifactId>parent-pom</artifactId>
-        <version>1.1.1</version>
+        <version>1.1.2-SNAPSHOT</version>
     </parent>
 
     <artifactId>valmodule-isip1</artifactId>
