--- a/valmodule-epa3-basic/pom.xml
+++ b/valmodule-epa3-basic/pom.xml
@@ -10,7 +10,7 @@
     </parent>
 
     <artifactId>valmodule-epa3-basic</artifactId>
-    <version>1.1.0-SNAPSHOT</version>
+    <version>1.1.0</version>
 
     <build>
         <plugins>
