--- a/valmodule-epa3-medication/src/main/resources/plugin/config.yaml
+++ b/valmodule-epa3-medication/src/main/resources/plugin/config.yaml
@@ -2,17 +2,20 @@ configSpecVersion: "1.0"
 id: "epa3-medication"
 author: "gematik GmbH"
 description: "Referenzvalidator-Plugin für die ePA-Medication Spezifikation"
-specUrl: "https://simplifier.net/packages/de.gematik.epa.medication/1.0.2"
+specUrl: "https://simplifier.net/packages/de.gematik.epa.medication/1.0.3"
 version: "${project.version}"
 validation:
-  fhirPackage: "de.gematik.epa.medication#1.0.2"
+  fhirPackage: "de.gematik.epa.medication#1.0.3"
   dependencies:
     - "hl7.fhir.uv.ips#1.1.0"
+    - "kbv.all.st-rc#1.4.0"
   errorOnUnknownProfile: "false"
   anyExtensionsAllowed: "true"
   ignoredCodeSystems:
-  - "http://fhir.de/CodeSystem/bfarm/atc"
-  - "http://fhir.de/CodeSystem/ask"
-  - "http://fhir.de/CodeSystem/ifa/pzn"
+    - "http://fhir.de/CodeSystem/bfarm/atc"
+    - "http://fhir.de/CodeSystem/ask"
+    - "http://fhir.de/CodeSystem/ifa/pzn"
+    - "http://snomed.info/sct"
+    - "https://terminologieserver.bfarm.de/fhir/CodeSystem/arzneimittel-referenzdaten-pharmazeutisches-produkt"
 snapshotDependencies:
   - "hl7.terminology.r4#5.0.0"
