--- a/plugin-builder/pom.xml
+++ b/plugin-builder/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>de.gematik.refv.plugins</groupId>
         <artifactId>parent-pom</artifactId>
-        <version>1.1.2-SNAPSHOT</version>
+        <version>1.2.0</version>
     </parent>
 
     <artifactId>plugin-builder</artifactId>
