--- a/valmodule-epa3-basic/pom.xml
+++ b/valmodule-epa3-basic/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>de.gematik.refv.plugins</groupId>
         <artifactId>parent-pom</artifactId>
-        <version>1.1.2-SNAPSHOT</version>
+        <version>1.2.0</version>
     </parent>
 
     <artifactId>valmodule-epa3-basic</artifactId>
