--- a/valmodule-isik3-medikation/pom.xml
+++ b/valmodule-isik3-medikation/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>de.gematik.refv.plugins</groupId>
         <artifactId>parent-pom</artifactId>
-        <version>1.2.0</version>
+        <version>1.2.1-SNAPSHOT</version>
     </parent>
 
     <artifactId>valmodule-isik3-medikation</artifactId>
