--- a/valmodule-epa3-medication/src/main/resources/plugin/config.yaml
+++ b/valmodule-epa3-medication/src/main/resources/plugin/config.yaml
@@ -8,7 +8,7 @@ validation:
   fhirPackage: "de.gematik.epa.medication#1.0.3"
   dependencies:
     - "hl7.fhir.uv.ips#1.1.0"
-    - "kbv.all.st-rc#1.4.0"
+    - "kbv.all.st#1.4.0"
   errorOnUnknownProfile: "false"
   anyExtensionsAllowed: "true"
   ignoredCodeSystems:
