--- a/valmodule-epa3-medication/pom.xml
+++ b/valmodule-epa3-medication/pom.xml
@@ -10,7 +10,7 @@
     </parent>
 
     <artifactId>valmodule-epa3-medication</artifactId>
-    <version>1.3.0</version>
+    <version>1.4.0-SNAPSHOT</version>
 
     <build>
         <plugins>
