--- a/valmodule-isik3-dokumentenaustausch/src/main/resources/plugin/config.yaml
+++ b/valmodule-isik3-dokumentenaustausch/src/main/resources/plugin/config.yaml
@@ -2,10 +2,10 @@ configSpecVersion: "1.0"
 id: "isik3-dokumentenaustausch"
 author: "gematik GmbH"
 description: "Referenzvalidator-Plugin für die Spezifikation 'Informationstechnische Systeme in Krankenhäusern (ISIK) Stufe 3 (Modul Dokumentenaustausch)'"
-specUrl: "https://simplifier.net/packages/de.gematik.isik-dokumentenaustausch/3.0.3"
+specUrl: "https://simplifier.net/packages/de.gematik.isik-dokumentenaustausch/3.0.4"
 version: "${project.version}"
 validation:
-  fhirPackage: "de.gematik.isik-dokumentenaustausch#3.0.3"
+  fhirPackage: "de.gematik.isik-dokumentenaustausch#3.0.4"
   errorOnUnknownProfile: "false"
   anyExtensionsAllowed: "true"
   ignoredCodeSystems:
@@ -25,6 +25,7 @@ validation:
       severityLevelTo: "information"
       locatorString: "urn:ihe:iti:xds:2017:mimeTypeSufficient"
       messageId: "Terminology_TX_Confirm_4a"
-snapshotDependencies:
-  - "hl7.terminology.r4#4.0.0"
-  - "hl7.terminology.r4#5.0.0"
+    - severityLevelFrom: "error"
+      severityLevelTo: "information"
+      locatorString: "urn:ihe:iti:xds:2017:mimeTypeSufficient"
+      messageId: "Terminology_TX_NoValid_12"
