--- a/valmodule-isik3-medikation/pom.xml
+++ b/valmodule-isik3-medikation/pom.xml
@@ -10,7 +10,7 @@
     </parent>
 
     <artifactId>valmodule-isik3-medikation</artifactId>
-    <version>0.5.0-SNAPSHOT</version>
+    <version>1.0.0</version>
 
     <build>
         <plugins>
