--- a/valmodule-isik3-terminplanung/src/main/resources/plugin/config.yaml
+++ b/valmodule-isik3-terminplanung/src/main/resources/plugin/config.yaml
@@ -2,10 +2,10 @@ configSpecVersion: "1.0"
 id: "isik3-terminplanung"
 author: "gematik GmbH"
 description: "Referenzvalidator-Plugin für die Spezifikation 'Informationstechnische Systeme in Krankenhäusern (ISIK) Stufe 3 (Modul Terminplanung)'"
-specUrl: "https://simplifier.net/packages/de.gematik.isik-terminplanung/3.0.3"
+specUrl: "https://simplifier.net/packages/de.gematik.isik-terminplanung/3.0.6"
 version: "${project.version}"
 validation:
-  fhirPackage: "de.gematik.isik-terminplanung#3.0.3"
+  fhirPackage: "de.gematik.isik-terminplanung#3.0.6"
   errorOnUnknownProfile: "false"
   anyExtensionsAllowed: "true"
   ignoredCodeSystems:
@@ -25,3 +25,7 @@ validation:
       severityLevelTo: "information"
       locatorString: "Appointment.participant:AkteurPatient"
       messageId: "Validation_VAL_Profile_Minimum"
+    - severityLevelFrom: "error"
+      severityLevelTo: "information"
+      locatorString: "Appointment.participant:AkteurPatient"
+      messageId: "Validation_VAL_Profile_Minimum_SLICE"
