--- a/valmodule-isik2-terminplanung/pom.xml
+++ b/valmodule-isik2-terminplanung/pom.xml
@@ -10,7 +10,7 @@
     </parent>
 
     <artifactId>valmodule-isik2-terminplanung</artifactId>
-    <version>1.4.0-SNAPSHOT</version>
+    <version>1.4.0</version>
 
     <build>
         <plugins>
