--- a/pom.xml
+++ b/pom.xml
@@ -118,6 +118,8 @@
     <version.maven-gpg-plugin>3.0.1</version.maven-gpg-plugin>
     <assertj-core.version>3.26.3</assertj-core.version>
     <spotless-maven-plugin.version>2.41.1</spotless-maven-plugin.version>
+    <license-maven-plugin.version>2.5.0</license-maven-plugin.version>
+    <ospo-resources.version>1.3.0</ospo-resources.version>
   </properties>
 
   <build>
@@ -226,16 +228,55 @@
       </plugin>
 
       <plugin>
-        <groupId>com.diffplug.spotless</groupId>
-        <artifactId>spotless-maven-plugin</artifactId>
-        <version>${spotless-maven-plugin.version}</version>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>license-maven-plugin</artifactId>
+        <version>${license-maven-plugin.version}</version>
         <configuration>
-          <java>
-            <licenseHeader>
-              <file>LICENSE</file>
-            </licenseHeader>
-          </java>
+          <licenseName>apache_v2_0</licenseName>
+          <licenseResolver>classpath://copyright-header/apache-license</licenseResolver>
+          <inceptionYear>2025</inceptionYear>
+          <organizationName>gematik GmbH</organizationName>
+
+          <forceDownload>false</forceDownload>
+
+          <failOnMissingHeader>true</failOnMissingHeader>
+          <failOnNotUptodateHeader>true</failOnNotUptodateHeader>
+          <canUpdateCopyright>true</canUpdateCopyright>
+          <addJavaLicenseAfterPackage>false</addJavaLicenseAfterPackage>
+
+          <includes>
+            <include>**/*.java</include>
+          </includes>
+          <excludes>
+            <exclude>**/generated/**</exclude>
+          </excludes>
         </configuration>
+
+        <dependencies>
+          <dependency>
+            <groupId>de.gematik</groupId>
+            <artifactId>ospo-resources</artifactId>
+            <version>${ospo-resources.version}</version>
+          </dependency>
+        </dependencies>
+
+        <executions>
+          <!-- Update der Source-Header -->
+          <execution>
+            <id>update-file-header</id>
+            <goals>
+              <goal>update-file-header</goal>
+            </goals>
+          </execution>
+
+          <!-- Check der Source-Header -->
+          <execution>
+            <id>check-file-header</id>
+            <goals>
+              <goal>check-file-header</goal>
+            </goals>
+          </execution>
+        </executions>
       </plugin>
 
     </plugins>
