--- a/valmodule-eeb/src/main/resources/plugin/config.yaml
+++ b/valmodule-eeb/src/main/resources/plugin/config.yaml
@@ -2,9 +2,9 @@ configSpecVersion: "1.0"
 id: "eeb"
 author: "gematik GmbH"
 description: "Referenzvalidator-Plugin für die Spezifikation 'Definition Versichertenstammdaten zum Versand via KIM für GKV VSDM Ersatzbescheinigung und PKV Online Check-In'"
-specUrl: "https://simplifier.net/isik-basis-v1"
+specUrl: "https://simplifier.net/packages/de.gematik.elektronische-versicherungsbescheinigung/1.0.1/"
 version: "${project.version}"
 validation:
-  fhirPackage: "de.gematik.elektronische-versicherungsbescheinigung#1.0.0"
+  fhirPackage: "de.gematik.elektronische-versicherungsbescheinigung#1.0.1"
   errorOnUnknownProfile: "true"
   anyExtensionsAllowed: "false"
