--- a/valmodule-isik2-medikation/pom.xml
+++ b/valmodule-isik2-medikation/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>de.gematik.refv.plugins</groupId>
         <artifactId>parent-pom</artifactId>
-        <version>2.0.0</version>
+        <version>2.0.1-SNAPSHOT</version>
     </parent>
 
     <artifactId>valmodule-isik2-medikation</artifactId>
