--- a/valmodule-isik3-dokumentenaustausch/pom.xml
+++ b/valmodule-isik3-dokumentenaustausch/pom.xml
@@ -10,7 +10,7 @@
     </parent>
 
     <artifactId>valmodule-isik3-dokumentenaustausch</artifactId>
-    <version>2.1.0-SNAPSHOT</version>
+    <version>2.1.0</version>
 
     <build>
         <plugins>
