--- a/valmodule-isik5/pom.xml
+++ b/valmodule-isik5/pom.xml
@@ -9,8 +9,8 @@
         <version>2.0.2-SNAPSHOT</version>
     </parent>
 
-    <artifactId>valmodule-isik3-vitalparameter</artifactId>
-    <version>1.2.0-SNAPSHOT</version>
+    <artifactId>valmodule-isik5</artifactId>
+    <version>1.0.0</version>
 
     <build>
         <plugins>
@@ -49,7 +49,6 @@
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>exec-maven-plugin</artifactId>
-
             </plugin>
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
@@ -65,7 +64,7 @@
                         <configuration>
                             <artifacts>
                                 <artifact>
-                                    <file>target/isik3-vitalparameter-${project.version}.zip</file>
+                                    <file>target/isik5-${project.version}.zip</file>
                                     <type>zip</type>
                                     <classifier>refv-plugin</classifier>
                                 </artifact>
