--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <groupId>de.gematik.refv.plugins</groupId>
     <artifactId>parent-pom</artifactId>
     <packaging>pom</packaging>
-    <version>2.0.2</version>
+    <version>2.0.3-SNAPSHOT</version>
     <name>gematik Referenzvalidator Plugins</name>
     <description>Plugin-Repository des gematik Referenzvalidators</description>
     <url>https://github.com/gematik/app-referencevalidator-plugins</url>
