--- a/valmodule-epa3-basic/pom.xml
+++ b/valmodule-epa3-basic/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>de.gematik.refv.plugins</groupId>
         <artifactId>parent-pom</artifactId>
-        <version>2.0.2</version>
+        <version>2.0.3-SNAPSHOT</version>
     </parent>
 
     <artifactId>valmodule-epa3-basic</artifactId>
