--- a/valmodule-erp-eu/pom.xml
+++ b/valmodule-erp-eu/pom.xml
@@ -9,8 +9,8 @@
         <version>2.0.3-SNAPSHOT</version>
     </parent>
 
-    <artifactId>valmodule-isik5</artifactId>
-    <version>1.1.0-SNAPSHOT</version>
+    <artifactId>valmodule-erp-eu</artifactId>
+    <version>1.0.0</version>
 
     <build>
         <plugins>
@@ -64,7 +64,7 @@
                         <configuration>
                             <artifacts>
                                 <artifact>
-                                    <file>target/isik5-${project.version}.zip</file>
+                                    <file>target/erp-eu-${project.version}.zip</file>
                                     <type>zip</type>
                                     <classifier>refv-plugin</classifier>
                                 </artifact>
